tests/ui/const-generics/mgca/trait-assoc-fn-as-const-arg.stderr
error: the constant `<Self as Bar>::x` is not of type `usize`
  --> $DIR/trait-assoc-fn-as-const-arg.rs:6:20
   |
LL |     fn x(&self) -> [i32; Bar::x];
   |                    ^^^^^^^^^^^^^ expected `usize`, found fn item
   |
   = note: the length of array `[i32; <Self as Bar>::x]` must be type `usize`

error: aborting due to 1 previous error

